[package]
name = "millionaire"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
num-bigint = { version = "0.4.6", features = ["rand"] }
num-iter = "0.1.45"
num-traits = "0.2.19"
once_cell = "1.20.3"
protobuf = "3.7.1"
rand = "0.8"
rand_chacha = "0.3.1"
sha256 = "1.5.0"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"
